[package]
name = "cairo-lang-compiler"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Cairo compiler."

[dependencies]
anyhow.workspace = true
cairo-lang-defs = { path = "../cairo-lang-defs", version = "1.0.0-alpha.7" }
cairo-lang-diagnostics = { path = "../cairo-lang-diagnostics", version = "1.0.0-alpha.7" }
cairo-lang-filesystem = { path = "../cairo-lang-filesystem", version = "1.0.0-alpha.7" }
cairo-lang-lowering = { path = "../cairo-lang-lowering", version = "1.0.0-alpha.7" }
cairo-lang-parser = { path = "../cairo-lang-parser", version = "1.0.0-alpha.7" }
cairo-lang-plugins = { path = "../cairo-lang-plugins", version = "1.0.0-alpha.7" }
cairo-lang-project = { path = "../cairo-lang-project", version = "1.0.0-alpha.7" }
cairo-lang-semantic = { path = "../cairo-lang-semantic", version = "1.0.0-alpha.7" }
cairo-lang-sierra = { path = "../cairo-lang-sierra", version = "1.0.0-alpha.7" }
cairo-lang-sierra-generator = { path = "../cairo-lang-sierra-generator", version = "1.0.0-alpha.7" }
cairo-lang-syntax = { path = "../cairo-lang-syntax", version = "1.0.0-alpha.7" }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "1.0.0-alpha.7" }
clap.workspace = true
log.workspace = true
salsa.workspace = true
smol_str.workspace = true
thiserror.workspace = true

[dev-dependencies]
test-log.workspace = true

[[bin]]
name = "cairo-compile"
path = "src/cli.rs"
