[package]
name = "cairo-lang-compiler"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Cairo compiler."

[dependencies]
anyhow.workspace = true
cairo-lang-defs = { path = "../cairo-lang-defs", version = "~2.10.1" }
cairo-lang-diagnostics = { path = "../cairo-lang-diagnostics", version = "~2.10.1" }
cairo-lang-filesystem = { path = "../cairo-lang-filesystem", version = "~2.10.1" }
cairo-lang-lowering = { path = "../cairo-lang-lowering", version = "~2.10.1" }
cairo-lang-parser = { path = "../cairo-lang-parser", version = "~2.10.1" }
cairo-lang-project = { path = "../cairo-lang-project", version = "~2.10.1" }
cairo-lang-semantic = { path = "../cairo-lang-semantic", version = "~2.10.1", features = ["testing"] }
cairo-lang-sierra = { path = "../cairo-lang-sierra", version = "~2.10.1" }
cairo-lang-sierra-generator = { path = "../cairo-lang-sierra-generator", version = "~2.10.1" }
cairo-lang-syntax = { path = "../cairo-lang-syntax", version = "~2.10.1" }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "~2.10.1" }
indoc.workspace = true
rayon.workspace = true
salsa.workspace = true
semver.workspace = true
smol_str.workspace = true
thiserror.workspace = true

[dev-dependencies]
