[package]
name = "cairo-lang-debug"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Debug utilities for query objects."

[dependencies]
cairo-lang-utils = { path = "../cairo-lang-utils", version = "~2.10.1" }

[dev-dependencies]
cairo-lang-proc-macros = { path = "../cairo-lang-proc-macros"}
env_logger.workspace = true
salsa.workspace = true
test-log.workspace = true
