[package]
name = "cairo-lang-debug"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Debug utilities for query objects."

[dependencies]
get-size2 = { workspace = true, optional = true }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "~2.14.0", features = ["tracing"] }
id-arena.workspace = true
salsa.workspace = true

[features]
heapsize = ["get-size2", "cairo-lang-utils/heapsize"]

[dev-dependencies]
cairo-lang-proc-macros = { path = "../cairo-lang-proc-macros" }
cairo-lang-test-utils = { path = "../cairo-lang-test-utils", features = ["testing"] }
tracing.workspace = true
