[package]
name = "cairo-lang-defs"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Handling of definitions of language items in Cairo."

[dependencies]
cairo-lang-debug = { path = "../cairo-lang-debug", version = "1.1.0-rc0" }
cairo-lang-diagnostics = { path = "../cairo-lang-diagnostics", version = "1.1.0-rc0" }
cairo-lang-filesystem = { path = "../cairo-lang-filesystem", version = "1.1.0-rc0" }
cairo-lang-parser = { path = "../cairo-lang-parser", version = "1.1.0-rc0" }
cairo-lang-syntax = { path = "../cairo-lang-syntax", version = "1.1.0-rc0" }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "1.1.0-rc0" }
indexmap.workspace = true
itertools.workspace = true
salsa.workspace = true
smol_str.workspace = true

[dev-dependencies]
cairo-lang-test-utils = { path = "../cairo-lang-test-utils", version = "1.1.0-rc0" }
env_logger.workspace = true
indoc.workspace = true
pretty_assertions.workspace = true
test-log.workspace = true
