[package]
name = "cairo-lang-defs"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Handling of definitions of language items in Cairo."

[dependencies]
bincode.workspace = true
cairo-lang-debug = { path = "../cairo-lang-debug", version = "~2.13.1" }
cairo-lang-diagnostics = { path = "../cairo-lang-diagnostics", version = "~2.13.1" }
cairo-lang-filesystem = { path = "../cairo-lang-filesystem", version = "~2.13.1" }
cairo-lang-parser = { path = "../cairo-lang-parser", version = "~2.13.1" }
cairo-lang-syntax = { path = "../cairo-lang-syntax", version = "~2.13.1" }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "~2.13.1", features = ["tracing"] }
itertools = { workspace = true, default-features = true }
salsa.workspace = true
serde = { workspace = true, default-features = true }
typetag.workspace = true
xxhash-rust.workspace = true

[dev-dependencies]
cairo-lang-test-utils = { path = "../cairo-lang-test-utils", features = ["testing"] }
indoc.workspace = true
pretty_assertions.workspace = true
tracing.workspace = true
