[package]
name = "cairo-lang-doc"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "A collection of documentation processing utilities for the Cairo programming language."

[dependencies]
cairo-lang-defs = { path = "../cairo-lang-defs", version = "~2.11.4" }
cairo-lang-parser = { path = "../cairo-lang-parser", version = "~2.11.4" }
cairo-lang-syntax = { path = "../cairo-lang-syntax", version = "~2.11.4" }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "~2.11.4" }
cairo-lang-semantic = { path = "../cairo-lang-semantic", version = "~2.11.4" }
cairo-lang-filesystem = { path = "../cairo-lang-filesystem", version = "~2.11.4" }
cairo-lang-formatter = { path = "../cairo-lang-formatter", version = "~2.11.4" }
cairo-lang-diagnostics = { path = "../cairo-lang-diagnostics", version ="~2.11.4"}
cairo-lang-debug = { path = "../cairo-lang-debug", version ="~2.11.4" }
smol_str.workspace = true
pulldown-cmark = "0.13.0"
salsa.workspace = true
itertools.workspace = true

[dev-dependencies]
indoc.workspace = true
anyhow.workspace = true
cairo-lang-semantic = { path = "../cairo-lang-semantic" }
cairo-lang-test-utils = { path = "../cairo-lang-test-utils", features = ["testing"] }
test-log.workspace = true
