[package]
name = "cairo-lang-doc"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "A collection of documentation processing utilities for the Cairo programming language."

[dependencies]
cairo-lang-debug = { path = "../cairo-lang-debug", version = "~2.14.0" }
cairo-lang-defs = { path = "../cairo-lang-defs", version = "~2.14.0" }
cairo-lang-diagnostics = { path = "../cairo-lang-diagnostics", version = "~2.14.0" }
cairo-lang-filesystem = { path = "../cairo-lang-filesystem", version = "~2.14.0" }
cairo-lang-formatter = { path = "../cairo-lang-formatter", version = "~2.14.0" }
cairo-lang-parser = { path = "../cairo-lang-parser", version = "~2.14.0" }
cairo-lang-semantic = { path = "../cairo-lang-semantic", version = "~2.14.0" }
cairo-lang-syntax = { path = "../cairo-lang-syntax", version = "~2.14.0" }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "~2.14.0", features = ["tracing"] }
itertools.workspace = true
pulldown-cmark = "0.13.0"
salsa.workspace = true

[dev-dependencies]
anyhow.workspace = true
cairo-lang-semantic = { path = "../cairo-lang-semantic" }
cairo-lang-test-utils = { path = "../cairo-lang-test-utils", features = ["testing"] }
indoc.workspace = true
tracing.workspace = true
