[package]
name = "cairo-lang-eq-solver"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Equation solving for Sierra generation."

[dependencies]
cairo-lang-utils = { path = "../cairo-lang-utils", version = "~2.13.1", features = ["tracing"] }
good_lp.workspace = true

[dev-dependencies]
cairo-lang-test-utils = { path = "../cairo-lang-test-utils", features = ["testing"] }
tracing.workspace = true
