[package]
name = "cairo-lang-executable"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Cairo executable artifact."

[dependencies]
anyhow.workspace = true
cairo-lang-casm = { path = "../cairo-lang-casm", version = "~2.10.1", default-features = true, features = ["serde"] }
cairo-lang-compiler = { path = "../cairo-lang-compiler", version = "~2.10.1" }
cairo-lang-debug = { path = "../cairo-lang-debug", version = "~2.10.1" }
cairo-lang-defs = { path = "../cairo-lang-defs", version = "~2.10.1" }
cairo-lang-filesystem = { path = "../cairo-lang-filesystem", version = "~2.10.1" }
cairo-lang-lowering = { path = "../cairo-lang-lowering", version = "~2.10.1" }
cairo-lang-plugins = { path = "../cairo-lang-plugins", version = "~2.10.1" }
cairo-lang-runnable-utils = { path = "../cairo-lang-runnable-utils", version = "~2.10.1" }
cairo-lang-semantic = { path = "../cairo-lang-semantic", version = "~2.10.1" }
cairo-lang-sierra-generator = { path = "../cairo-lang-sierra-generator", version = "~2.10.1" }
cairo-lang-sierra-to-casm = { path = "../cairo-lang-sierra-to-casm", version = "~2.10.1" }
cairo-lang-syntax = { path = "../cairo-lang-syntax", version = "~2.10.1" }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "~2.10.1" }
cairo-vm.workspace = true
itertools = { workspace = true, default-features = true }
indoc.workspace = true
serde.workspace = true

[dev-dependencies]
cairo-lang-compiler = { path = "../cairo-lang-compiler" }
cairo-lang-debug = { path = "../cairo-lang-debug" }
cairo-lang-diagnostics = { path = "../cairo-lang-diagnostics" }
cairo-lang-plugins = { path = "../cairo-lang-plugins", features = ["testing"] }
cairo-lang-semantic = { path = "../cairo-lang-semantic", features = ["testing"] }
cairo-lang-test-utils = { path = "../cairo-lang-test-utils", features = ["testing"] }
env_logger.workspace = true
indoc.workspace = true
test-case.workspace = true
test-log.workspace = true
