[package]
name = "cairo-lang-executable"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Cairo executable artifact."

[dependencies]
anyhow.workspace = true
cairo-lang-casm = { path = "../cairo-lang-casm", version = "~2.14.0", default-features = true, features = [
  "serde",
] }
cairo-lang-compiler = { path = "../cairo-lang-compiler", version = "~2.14.0" }
cairo-lang-debug = { path = "../cairo-lang-debug", version = "~2.14.0" }
cairo-lang-executable-plugin = { path = "../cairo-lang-executable-plugin", version = "~2.14.0" }
cairo-lang-filesystem = { path = "../cairo-lang-filesystem", version = "~2.14.0" }
cairo-lang-lowering = { path = "../cairo-lang-lowering", version = "~2.14.0" }
cairo-lang-runnable-utils = { path = "../cairo-lang-runnable-utils", version = "~2.14.0" }
cairo-lang-semantic = { path = "../cairo-lang-semantic", version = "~2.14.0" }
cairo-lang-sierra-generator = { path = "../cairo-lang-sierra-generator", version = "~2.14.0" }
cairo-lang-sierra-to-casm = { path = "../cairo-lang-sierra-to-casm", version = "~2.14.0" }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "~2.14.0", features = ["tracing"] }
cairo-vm.workspace = true
itertools = { workspace = true, default-features = true }
salsa.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
cairo-lang-compiler = { path = "../cairo-lang-compiler" }
cairo-lang-debug = { path = "../cairo-lang-debug" }
cairo-lang-semantic = { path = "../cairo-lang-semantic", features = ["testing"] }
cairo-lang-test-utils = { path = "../cairo-lang-test-utils", features = ["testing"] }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "~2.14.0", features = ["tracing"] }
