[package]
name = "cairo-lang-execute-utils"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Some utilities for the Cairo-Execute binary crate."

[dependencies]
anyhow.workspace = true
cairo-lang-executable = { path = "../cairo-lang-executable", version = "~2.11.2" }
cairo-lang-runner = { path = "../cairo-lang-runner", version = "~2.11.2" }
cairo-lang-casm = { path = "../cairo-lang-casm", version = "~2.11.2" }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "~2.11.2" }
cairo-vm.workspace = true
serde_json.workspace = true
cairo-lang-test-utils = { path = "../cairo-lang-test-utils", version = "~2.11.2", features = [
    "testing",
] }
num-bigint.workspace = true
