[package]
name = "cairo-lang-execute-utils"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Some utilities for the Cairo-Execute binary crate."

[dependencies]
anyhow.workspace = true
cairo-lang-casm = { path = "../cairo-lang-casm", version = "~2.13.1" }
cairo-lang-executable = { path = "../cairo-lang-executable", version = "~2.13.1" }
cairo-lang-runner = { path = "../cairo-lang-runner", version = "~2.13.1" }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "~2.13.1" }
cairo-vm.workspace = true
num-bigint.workspace = true
serde_json.workspace = true
