[package]
name = "cairo-lang-filesystem"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Virtual filesystem for the compiler."

[dependencies]
cairo-lang-debug = { path = "../cairo-lang-debug", version = "~2.10.1" }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "~2.10.1", features = ["serde"] }
path-clean.workspace = true
salsa.workspace = true
semver.workspace = true
serde = { workspace = true, default-features = true }
smol_str.workspace = true
toml.workspace = true

[dev-dependencies]
env_logger.workspace = true
serde_json.workspace = true
test-log.workspace = true

[package.metadata.cargo-machete]
ignored = ["cairo-lang-debug"]
