[package]
name = "cairo-lang-filesystem"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Virtual filesystem for the compiler."

[dependencies]
cairo-lang-debug = { path = "../cairo-lang-debug", version = "~2.11.4" }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "~2.11.4", features = ["serde"] }
itertools = { workspace = true, default-features = true }
path-clean.workspace = true
salsa.workspace = true
semver.workspace = true
serde = { workspace = true, default-features = true }
smol_str.workspace = true
toml.workspace = true

[dev-dependencies]
env_logger.workspace = true
indoc.workspace = true
pretty_assertions.workspace = true
serde_json.workspace = true
test-log.workspace = true

[package.metadata.cargo-machete]
ignored = ["cairo-lang-debug"]
