[package]
name = "cairo-lang-formatter"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Cairo formatter."

[dependencies]
anyhow.workspace = true
cairo-lang-diagnostics = { path = "../cairo-lang-diagnostics", version = "2.0.0-rc0" }
cairo-lang-filesystem = { path = "../cairo-lang-filesystem", version = "2.0.0-rc0" }
cairo-lang-parser = { path = "../cairo-lang-parser", version = "2.0.0-rc0" }
cairo-lang-syntax = { path = "../cairo-lang-syntax", version = "2.0.0-rc0" }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "2.0.0-rc0" }
colored.workspace = true
diffy.workspace = true
ignore.workspace = true
itertools.workspace = true
log.workspace = true
salsa.workspace = true
smol_str.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true
test-log.workspace = true
