[package]
name = "cairo-lang-formatter"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Cairo formatter."

[dependencies]
anyhow.workspace = true
cairo-lang-diagnostics = { path = "../cairo-lang-diagnostics", version = "2.4.0" }
cairo-lang-filesystem = { path = "../cairo-lang-filesystem", version = "2.4.0" }
cairo-lang-parser = { path = "../cairo-lang-parser", version = "2.4.0" }
cairo-lang-syntax = { path = "../cairo-lang-syntax", version = "2.4.0" }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "2.4.0" }
diffy.workspace = true
ignore.workspace = true
itertools.workspace = true
salsa.workspace = true
serde.workspace = true
smol_str.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true
