[package]
name = "cairo-lang-formatter"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Cairo formatter."

[dependencies]
anyhow.workspace = true
cairo-lang-diagnostics = { path = "../cairo-lang-diagnostics", version = "~2.10.1" }
cairo-lang-filesystem = { path = "../cairo-lang-filesystem", version = "~2.10.1" }
cairo-lang-parser = { path = "../cairo-lang-parser", version = "~2.10.1" }
cairo-lang-syntax = { path = "../cairo-lang-syntax", version = "~2.10.1" }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "~2.10.1" }
diffy.workspace = true
ignore.workspace = true
itertools = { workspace = true, default-features = true }
salsa.workspace = true
serde = { workspace = true, default-features = true }
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true
