[package]
name = "cairo-lang-language-server"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Cairo language server."

[features]
testing = []

[dependencies]
anyhow.workspace = true
cairo-lang-compiler = { path = "../cairo-lang-compiler", version = "~2.8.5" }
cairo-lang-defs = { path = "../cairo-lang-defs", version = "~2.8.5" }
cairo-lang-diagnostics = { path = "../cairo-lang-diagnostics", version = "~2.8.5" }
cairo-lang-doc = { path = "../cairo-lang-doc", version = "~2.8.5" }
cairo-lang-filesystem = { path = "../cairo-lang-filesystem", version = "~2.8.5" }
cairo-lang-formatter = { path = "../cairo-lang-formatter", version = "~2.8.5" }
cairo-lang-lowering = { path = "../cairo-lang-lowering", version = "~2.8.5" }
cairo-lang-parser = { path = "../cairo-lang-parser", version = "~2.8.5" }
cairo-lang-project = { path = "../cairo-lang-project", version = "~2.8.5" }
cairo-lang-semantic = { path = "../cairo-lang-semantic", version = "~2.8.5" }
cairo-lang-starknet = { path = "../cairo-lang-starknet", version = "~2.8.5" }
cairo-lang-syntax = { path = "../cairo-lang-syntax", version = "~2.8.5" }
cairo-lang-test-plugin = { path = "../cairo-lang-test-plugin", version = "~2.8.5" }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "~2.8.5" }
crossbeam = "0.8.4"
governor = { version = "0.7.0", default-features = false, features = ["std", "quanta"]}
indent.workspace = true
indoc.workspace = true
itertools.workspace = true
jod-thread = "0.1.2"
lsp-server = "0.7.7"
lsp-types = "=0.95.0"
rustc-hash = "1.1.0"
salsa.workspace = true
scarb-metadata = "1.13"
scarb-proc-macro-server-types = "0.1"
serde = { workspace = true, default-features = true }
serde_json.workspace = true
smol_str.workspace = true
tempfile = "3"
tracing = "0.1"
tracing-chrome = "0.7.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
libc = "0.2.155"

[dev-dependencies]
assert_fs = "1.1"
cairo-lang-language-server = { path = ".", features = ["testing"] }
cairo-lang-test-utils = { path = "../cairo-lang-test-utils", features = ["testing"] }
pathdiff = "0.2"
pretty_assertions.workspace = true
test-log.workspace = true
