[package]
name = "cairo-lang-lean"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Cairo Lean verification."

[dependencies]
cairo-lang-casm = { path = "../cairo-lang-casm", version = "~2.6.3" }
cairo-lang-sierra-to-casm = { path = "../cairo-lang-sierra-to-casm", version = "~2.6.3" }
cairo-lang-utils = { path = "../cairo-lang-utils", version = "~2.6.3" }
itertools.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

[dev-dependencies]
